--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <section >
-            <img  id ="brad" src="images/Brad.jpg" alt="Brad">
+            <img  id ="brad" src="Images/brad-pitt.jpg" alt="Brad">
         </section>
         <article class ="biography">
            <p>My name is Brad Pitt. I am an actor from Shawnee, Oklahoma, though I now live in Los Angeles like every other actor.</p>
