--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 </head>
 <body>
     <header>
-       
         <H1><em>Curriculum Vitae</em></H1>
     </header>
     <main>
-        <section >
-            <img  id ="brad" src="Images/brad-pitt.jpg" alt="Brad">
+        <section>
+            <img  id ="brad" src="Images/Brad.jpg" alt="Brad">
         </section>
         <article class ="biography">
            <p>My name is Brad Pitt. I am an actor from Shawnee, Oklahoma, though I now live in Los Angeles like every other actor.</p>
