--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,54 +9,67 @@
     <title>CV of Brad Pitt</title>
     <meta name="description" content="Detta är det officela hemsidan för Brad Pitts CV">
 </head>
+
 <body>
     <header>
-        <H1><em>Curriculum Vitae</em></H1>
     </header>
     <main>
         <section>
-            <img  id ="brad" src="Images/Brad.jpg" alt="Brad">
+            <img id="brad" src="Images/Brad.jpg" alt="Brad">
         </section>
-        <article class ="biography">
-           <p>My name is Brad Pitt. I am an actor from Shawnee, Oklahoma, though I now live in Los Angeles like every other actor.</p>
-           <p>I have a wide range of acting skills, from action and thriller to comedy and drama. I am known for playing charismatic male leads, and have been described as the world's most attractive man by several media outlets. Nowadays I prefer subtler roles, including those where I play a father figure, which I am to my six children.</p>
-           <p>Apart from acting, I have experience as a producer for many films with my own production company Plan B Entertainment, of which I am the CEO. In my spare time, I enjoy philantropy, architecture, and skateboarding. In my work with the Make It Right Foundation, I get to combine at least two of these interests—sometimes all three!</p>    
+        <article class="biography">
+            <p>My name is Brad Pitt. I am an actor from Shawnee, Oklahoma, though I now live in Los Angeles like every
+                other actor.</p>
+            <p>I have a wide range of acting skills, from action and thriller to comedy and drama. I am known for
+                playing charismatic male leads, and have been described as the world's most attractive man by several
+                media outlets. Nowadays I prefer subtler roles, including those where I play a father figure, which I am
+                to my six children.</p>
+            <p>Apart from acting, I have experience as a producer for many films with my own production company Plan B
+                Entertainment, of which I am the CEO. In my spare time, I enjoy philantropy, architecture, and
+                skateboarding. In my work with the Make It Right Foundation, I get to combine at least two of these
+                interests—sometimes all three!</p>
         </article>
     </main>
-        <section class="list">
-            <section class = movies>
+    <section class="list">
+        <section class=movies>
 
-                    <h2>Movies</h2>
-                <ul >
-                        <li>Once Upon a Time... In Hollywood (2019)</li>
-                        <li>The Big Short (2015)</li>
-                        <li>World War Z (2013)</li>
-                        <li>Moneyball (2011)</li>
-                        <li>The Curious Case of Benjamin Button (2008)</li>
-                        <li>Babel (2006)</li>
-                        <li>Troy (2004)</li>
-                        <li>Ocean's Eleven (2001)</li>
-                        <li>Fight Club (1999)</li>
-                        <li>12 Monkeys (1995)</li>
-                        <li>Se7en (1995)</li>
-                        <li>Thelma & Louise (1991)</li>
-                </ul>
-            </section>
+            <h2>Movies</h2>
+            <ul>
+                <li>Once Upon a Time... In Hollywood (2019)</li>
+                <li>The Big Short (2015)</li>
+                <li>World War Z (2013)</li>
+                <li>Moneyball (2011)</li>
+                <li>The Curious Case of Benjamin Button (2008)</li>
+                <li>Babel (2006)</li>
+                <li>Troy (2004)</li>
+                <li>Ocean's Eleven (2001)</li>
+                <li>Fight Club (1999)</li>
+                <li>12 Monkeys (1995)</li>
+                <li>Se7en (1995)</li>
+                <li>Thelma & Louise (1991)</li>
+            </ul>
+        </section>
 
         <section class="awards">
             <h2>Awards</h2>
-            <ul >
-                <li><span class="winner">Winner:</span> Academy Award for Best Supporting Actor, Once Upon a Time... In Hollywood (2019)</li>
-                <li><span class ="winner">Winner:</span> Academy Award for Best Motion Picture (as producer), 12 Years a Slave (2013)</li>
-                <li><span class ="winner">Winner:</span> Golden Globe for Best Supporting Actor, Twelve Monkeys (1995)</li>
-                <li><span class="nominee">Nominee:</span> Academy Award for Best Motion Picture (as producer), The Big Short (2015)</li>
+            <ul>
+                <li><span class="winner">Winner:</span> Academy Award for Best Supporting Actor, Once Upon a Time... In
+                    Hollywood (2019)</li>
+                <li><span class="winner">Winner:</span> Academy Award for Best Motion Picture (as producer), 12 Years a
+                    Slave (2013)</li>
+                <li><span class="winner">Winner:</span> Golden Globe for Best Supporting Actor, Twelve Monkeys (1995)
+                </li>
+                <li><span class="nominee">Nominee:</span> Academy Award for Best Motion Picture (as producer), The Big
+                    Short (2015)</li>
                 <li><span class="nominee">Nominee:</span> Academy Award for Best Actor, Moneyball (2011)</li>
-                <li><span class="nominee">Nominee:</span> Academy Award for Best Actor, The Curious Case of Benjamin Button (2008)</li>
-                <li><span class="nominee">Nominee:</span> Golden Globe for Best Actor, The Curious Case of Benjamin Button (2008)</li>
+                <li><span class="nominee">Nominee:</span> Academy Award for Best Actor, The Curious Case of Benjamin
+                    Button (2008)</li>
+                <li><span class="nominee">Nominee:</span> Golden Globe for Best Actor, The Curious Case of Benjamin
+                    Button (2008)</li>
             </ul>
         </section>
     </section>
-    
+
     <footer>
         <h3>Contact</h3>
         <p>Brad Pitt</p>
@@ -67,4 +81,5 @@
 
     </aside>
 </body>
+
 </html>
