--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CV-style.css">
     <title>CV of Brad Pitt</title>
-    <meta name="description" content="Detta är det officela hemsidan för Brad Pitts CV">
+    <meta name="description" content="Official resume of me">
 </head>
 
 <body>
